--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
                         </div>
 
                         <div class="col-md-3 col-6">
-                            <div class="card metric-card bg-success text-white mb-0 h-100">
+                            <div class="card metric-card bg-teal text-white mb-0 h-100">
                                 <div class="card-body">
                                     <div class="d-flex justify-content-between align-items-start">
-                                        <h5 class="card-title mb-3">Unique Donors</h5>
-                                        <i class="bi bi-people fs-4"></i>
+                                        <h5 class="card-title mb-3">Most Frequent Amount</h5>
+                                        <i class="bi bi-currency-dollar fs-4"></i>
                                     </div>
-                                    <h2 class="card-text mb-0" id="unique-donors">0</h2>
+                                    <h2 class="card-text mb-0" id="frequent-amount">$0</h2>
                                 </div>
                             </div>
                         </div>
@@ -160,15 +160,16 @@
                         </div>
 
                         <div class="col-md-3 col-6">
-                            <div class="card metric-card bg-teal text-white mb-0 h-100">
+                            <div class="card metric-card bg-success text-white mb-0 h-100">
                                 <div class="card-body">
                                     <div class="d-flex justify-content-between align-items-start">
-                                        <h5 class="card-title mb-3">Most Frequent Amount</h5>
-                                        <i class="bi bi-currency-dollar fs-4"></i>
+                                        <h5 class="card-title mb-3">Repeated Donors</h5>
+                                        <i class="bi bi-people fs-4"></i>
                                     </div>
-                                    <h2 class="card-text mb-0" id="frequent-amount">$0</h2>
+                                    <h2 class="card-text mb-0" id="unique-donors">0</h2>
                                 </div>
                             </div>
+                            
                         </div>
 
                         <div class="col-md-3 col-6">
